hphp/test/zend/bad/ext/gd/tests/imagerectangle_error2.php
<?php
// Create a resource 
$image = tmpfile(); 

// Draw a rectangle
imagerectangle( $image, 0, 0, 50, 50, 2 );
?> 